modal overflow fixes

--- a/css/login.css
+++ b/css/login.css
@@ -33,4 +33,9 @@
   display: inline-block;
   text-align: left;
   vertical-align: middle;
+  overflow-y: initial !important;
+}
+
+.modal-body{
+    overflow-y: auto;
 }
